# aoc-2024

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: ceres_search.cpp  ceres_search.hpp  common.cpp  common.hpp  historian_hysteria.cpp  historian_hysteria.hpp  lib.cpp  mull_it_over.cpp  mull_it_over.hpp  red_nosed_reports.cpp  red_nosed_reports.hpp
test/: CMakeLists.txt
test/source/: aoc2024_test.cpp  day_1.cpp  day_2.cpp  day_3.cpp  day_4.cpp
